# JigsawPuzzle

./: .gitignore  CMakeLists.txt  main.cpp
components/: custom_puzzle_path.cpp  custom_puzzle_path.h  puzzle_path.cpp  puzzle_path.h  puzzle_piece.cpp  puzzle_piece.h
core/: jigsaw_types.h  puzzle_game.cpp  puzzle_game.h  puzzle_grid.cpp  puzzle_grid.h  save_system.cpp  save_system.h
resources/: backgrounds.qrc
tools/: creator_canvas.cpp  creator_canvas.h  image_effects.cpp  image_effects.h  path_creator.cpp  path_creator.h
ui/: game_menu.cpp  game_menu.h  main_window.cpp  main_window.h  main_window.ui  puzzle_button.cpp  puzzle_button.h  puzzle_label.cpp  puzzle_label.h  puzzle_slider.cpp  puzzle_slider.h  save_manager.cpp  save_manager.h
